resolve recent work title fontsize on mobile issue

--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ ul.skill > li {
   border-bottom: 1px solid #888;
   height: 100px;
   display: flex;
+  font-size: 30px;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -192,7 +193,7 @@ ul.skill > li {
   font-family: 'Crete Round', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 40px;
+  font-size: 30px;
   line-height: 52px;
   color: #1c1a19;
 }
@@ -209,7 +210,7 @@ ul.skill > li {
 }
 
 #first-work {
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 #first-work-details {
